// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Binnacle Service should dispatch fetch failed when any request fails 2`] = `
Array [
  Array [
    Object {
      "loadingData": true,
      "type": "CHANGE_GLOBAL_LOADING",
    },
  ],
  Array [
    Object {
      "error": [HTTPError: Bad Request],
      "type": "FETCH_GLOBAL_FAILED",
    },
  ],
]
`;

exports[`Binnacle Service should fetch all binnacle data correctly 1`] = `
Array [
  Array [
    Object {
      "loadingData": true,
      "type": "CHANGE_GLOBAL_LOADING",
    },
  ],
  Array [
    Object {
      "activities": Array [
        Object {
          "activities": Array [],
          "date": 2019-02-19T23:00:00.000Z,
          "workedMinutes": 0,
        },
      ],
      "holidays": Object {
        "privateHolidays": Array [],
        "publicHolidays": Array [],
      },
      "month": 2019-01-09T23:00:00.000Z,
      "recentRoles": Array [],
      "timeBalance": Object {
        "timeDifference": -100,
        "timeToWork": 100,
        "timeWorked": 0,
      },
      "type": "SAVE_BINNACLE_DATA",
    },
  ],
]
`;

exports[`Binnacle Service should fetch time balance by MONTH 1`] = `
Array [
  Array [
    Object {
      "loadingTimeBalance": true,
      "type": "CHANGE_LOADING_TIME_BALANCE",
    },
  ],
  Array [
    Object {
      "loadingTimeBalance": false,
      "type": "CHANGE_LOADING_TIME_BALANCE",
    },
  ],
  Array [
    Object {
      "isCalculatedByYear": false,
      "timeBalance": Object {
        "timeDifference": -100,
        "timeToWork": 100,
        "timeWorked": 0,
      },
      "type": "UPDATE_TIME_BALANCE",
    },
  ],
]
`;

exports[`Binnacle Service should fetch time balance by YEAR 1`] = `
Array [
  Array [
    Object {
      "loadingTimeBalance": true,
      "type": "CHANGE_LOADING_TIME_BALANCE",
    },
  ],
  Array [
    Object {
      "isCalculatedByYear": true,
      "timeBalance": Object {
        "timeDifference": -100,
        "timeToWork": 100,
        "timeWorked": 0,
      },
      "type": "UPDATE_TIME_BALANCE",
    },
  ],
]
`;

exports[`Binnacle Service should throw error when fetching time by MONTH fails 2`] = `
Array [
  Array [
    Object {
      "loadingTimeBalance": true,
      "type": "CHANGE_LOADING_TIME_BALANCE",
    },
  ],
  Array [
    Object {
      "loadingTimeBalance": false,
      "type": "CHANGE_LOADING_TIME_BALANCE",
    },
  ],
]
`;

exports[`Binnacle Service should throw error when fetching time by YEAR fails 2`] = `
Array [
  Array [
    Object {
      "loadingTimeBalance": true,
      "type": "CHANGE_LOADING_TIME_BALANCE",
    },
  ],
  Array [
    Object {
      "loadingTimeBalance": false,
      "type": "CHANGE_LOADING_TIME_BALANCE",
    },
  ],
]
`;
